--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ google-cloud-logging==1.15.1
 google-cloud-storage==1.37.1
 google-cloud-secret-manager==2.0.0
 pandas_gbq==0.18.1
-pyarrow==2.0.0
+# pyarrow==2.0.0
 pandas==1.3.5
 numpy
 Flask
