--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-google-cloud-bigquery==2.32.0
-google-cloud-bigquery-storage==2.11.0
-google-cloud-error-reporting==1.5.2
-google-cloud-logging==3.0.0
-google-cloud-storage==2.1.0
-google-cloud-secret-manager==2.8.0
+google-cloud-bigquery==2.22.1
+google-cloud-bigquery-storage==2.1.0
+google-cloud-error-reporting==1.0.0
+google-cloud-logging==1.15.1
+google-cloud-storage==1.37.1
+google-cloud-secret-manager==2.0.0
 pandas_gbq==0.17.4
-pyarrow==6.0.1
-pandas==1.4.0
+# pyarrow==2.0.0
+pandas==1.1.4
 numpy
 Flask
 gunicorn
